--- a/it4663/lab/PT_Training-optimize-NNs.ipynb
+++ b/it4663/lab/PT_Training-optimize-NNs.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/cuongct220020/d2l-training/blob/main/it4663/lab/PT_Training-optimize-NNs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "38b52cf5",
       "metadata": {
         "id": "38b52cf5"
@@ -159,10 +169,38 @@
       "source": [
         "class SmallCNN(nn.Module):\n",
         "    def __init__(self, num_classes=10):\n",
-        "        ## TODO: your implementation here\n",
+        "        super().__init__()\n",
+        "        # Convolutional layers\n",
+        "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, stride=1, padding=1)\n",
+        "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1)\n",
+        "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1)\n",
+        "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "\n",
+        "        # Calculate the size of the flattened features after convolutional layers\n",
+        "        # Input image size is 32x32\n",
+        "        # After conv1 (32x32x32), pool (16x16x32)\n",
+        "        # After conv2 (16x16x64), pool (8x8x64)\n",
+        "        # After conv3 (8x8x128), pool (4x4x128)\n",
+        "        self.fc_input_dim = 128 * 4 * 4\n",
+        "\n",
+        "        # Classification head\n",
+        "        self.fc1 = nn.Linear(self.fc_input_dim, 256)\n",
+        "        self.fc2 = nn.Linear(256, num_classes)\n",
+        "\n",
         "\n",
         "    def forward(self, x):\n",
-        "        ## TODO: your implementation here\n"
+        "        # Convolutional layers with ReLU and MaxPool\n",
+        "        x = self.pool(F.relu(self.conv1(x)))\n",
+        "        x = self.pool(F.relu(self.conv2(x)))\n",
+        "        x = self.pool(F.relu(self.conv3(x)))\n",
+        "\n",
+        "        # Flatten the output for the classification head\n",
+        "        x = x.view(-1, self.fc_input_dim)\n",
+        "\n",
+        "        # Classification head with ReLU and Softmax\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = F.softmax(self.fc2(x), dim=1) # Softmax for output layer\n",
+        "        return x"
       ]
     },
     {
@@ -182,9 +220,9 @@
         "\n",
         "[VN]\n",
         "## Bộ dữ liệu CIFAR-10\n",
-        "Bộ dữ liệu CIFAR-10 là một bộ ảnh thường dùng cho huấn luyện giải thuật học máy và thị giác máy tính. Bộ dữ liệu CIFAR-10 chứa 60K ảnh mầu kích thước 32x32 gán 10 lớp nhãn chúng là máy bay, ô tô, chim, mèo, hươu, chó, ếch, máy bay, tầu và xe tải. Có 6K ảnh tương ứng mỗi lớp. Để tài bộ dữ liêu, ta cân có\n",
+        "Bộ dữ liệu CIFAR-10 là một bộ ảnh thường dùng cho huấn luyện giải thuật học máy và thị giác máy tính. Bộ dữ liệu CIFAR-10 chứa 60K ảnh mầu kích thước 32x32 gán 10 lớp nhãn chúng là máy bay, ô tô, chim, mèo, hươu, chó, ếch, ngựa, tầu và xe tải. Có 6K ảnh tương ứng mỗi lớp. Để tài bộ dữ liêu, ta cần có\n",
         "\n",
-        "* Chuẩn hoá mầu ảnh\n",
+        "* Chuẩn hoá màu ảnh\n",
         "\n",
         "* Chuyển sang tensor\n"
       ]
@@ -237,7 +275,7 @@
         "\n",
         "    train_loader = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=True, num_workers=2, pin_memory=True)\n",
         "    test_loader = torch.utils.data.DataLoader(test_set, batch_size=batch_size, shuffle=False, num_workers=2, pin_memory=True)\n",
-        "    return train_loader, test_loader, num_classes\n"
+        "    return train_loader, test_loader, num_classes"
       ]
     },
     {
@@ -434,17 +472,17 @@
         "def get_optimizer(name: str, model_params, lr: float = 1e-3, momentum: float = 0.9, weight_decay: float = 0.0):\n",
         "    name = name.lower()\n",
         "    if name == 'sgd':\n",
-        "        ## TODO: your implementation here\n",
+        "        return optim.SGD(model_params, lr=lr, weight_decay=weight_decay)\n",
         "    elif name == 'sgd_momentum':\n",
-        "        ## TODO: your implementation here\n",
+        "        return optim.SGD(model_params, lr=lr, momentum=momentum, weight_decay=weight_decay)\n",
         "    elif name == 'adagrad':\n",
-        "        ## TODO: your implementation here\n",
+        "        return optim.Adagrad(model_params, lr=lr, weight_decay=weight_decay)\n",
         "    elif name == 'rmsprop':\n",
-        "        ## TODO: your implementation here\n",
+        "        return optim.RMSprop(model_params, lr=lr, momentum=momentum, weight_decay=weight_decay)\n",
         "    elif name == 'adam':\n",
-        "        ## TODO: your implementation here\n",
+        "        return optim.Adam(model_params, lr=lr, weight_decay=weight_decay)\n",
         "    else:\n",
-        "        raise ValueError(f\"Unknown optimizer: {name}\")\n"
+        "        raise ValueError(f\"Unknown optimizer: {name}\")"
       ]
     },
     {
@@ -492,7 +530,6 @@
         "            print(f\"[{exp_name}] Epoch {epoch}/{num_epochs} | train loss {train_loss:.4f} acc {train_acc:.4f} | \"\n",
         "                  f\"val loss {val_loss:.4f} acc {val_acc:.4f} | time {time.time()-t0:.1f}s\")\n",
         "\n",
-        "\n",
         "    # save results\n",
         "    out = {\n",
         "        'exp_name': exp_name,\n",
@@ -502,11 +539,12 @@
         "        'best_val_acc': best_val_acc,\n",
         "        'history': history,\n",
         "    }\n",
+        "\n",
         "    # save model\n",
         "    model_path = OUT_DIR / f\"{exp_name}_best.pth\"\n",
         "    if best_model is not None:\n",
         "        torch.save(best_model, model_path)\n",
-        "    return out\n"
+        "    return out"
       ]
     },
     {
@@ -549,7 +587,7 @@
         "    plt.legend(fontsize='small')\n",
         "    plt.grid(True)\n",
         "    plt.tight_layout()\n",
-        "    plt.show()\n"
+        "    plt.show()"
       ]
     },
     {
@@ -902,7 +940,7 @@
         "\n",
         "# Plot train loss validation accuracies\n",
         "plot_history(results, key='train_loss')\n",
-        "plot_history(results, key='val_acc')\n"
+        "plot_history(results, key='val_acc')"
       ]
     },
     {
@@ -951,20 +989,53 @@
         "        def norm_layer(channels):\n",
         "            # Feel free to add as many normalization techniques as you want!\n",
         "            if norm is None:\n",
-        "                ## TODO: your implementation here\n",
+        "                return nn.Identity() # No normalization\n",
         "            elif norm == 'batch':\n",
-        "                ## TODO: your implementation here\n",
+        "                return nn.BatchNorm2d(channels)\n",
         "            elif norm == 'instance':\n",
-        "                ## TODO: your implementation here\n",
+        "                return nn.InstanceNorm2d(channels)\n",
         "            elif norm == 'group':\n",
-        "                ## TODO: your implementation here\n",
+        "                # You need to specify the number of groups for GroupNorm.\n",
+        "                # A common choice is to use 32 groups, but it can be tuned.\n",
+        "                return nn.GroupNorm(32, channels)\n",
         "            else:\n",
         "                raise ValueError(\"The normalization technique is not supported\")\n",
         "\n",
         "        # Copy your implementation of SmallCNN here. Make sure to add norm_layer to your architecture.\n",
+        "        # Convolutional layers\n",
+        "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, stride=1, padding=1)\n",
+        "        self.norm1 = norm_layer(32)\n",
+        "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1)\n",
+        "        self.norm2 = norm_layer(64)\n",
+        "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1)\n",
+        "        self.norm3 = norm_layer(128)\n",
+        "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "\n",
+        "        # Calculate the size of the flattened features after convolutional layers\n",
+        "        # Input image size is 32x32\n",
+        "        # After conv1 (32x32x32), norm1, pool (16x16x32)\n",
+        "        # After conv2 (16x16x64), norm2, pool (8x8x64)\n",
+        "        # After conv3 (8x8x128), norm3, pool (4x4x128)\n",
+        "        self.fc_input_dim = 128 * 4 * 4\n",
+        "\n",
+        "        # Classification head\n",
+        "        self.fc1 = nn.Linear(self.fc_input_dim, 256)\n",
+        "        self.fc2 = nn.Linear(256, num_classes)\n",
+        "\n",
         "\n",
         "    def forward(self, x):\n",
-        "        # Copy your implementation of SmallCNN here"
+        "        # Convolutional layers with ReLU, Normalization and MaxPool\n",
+        "        x = self.pool(F.relu(self.norm1(self.conv1(x))))\n",
+        "        x = self.pool(F.relu(self.norm2(self.conv2(x))))\n",
+        "        x = self.pool(F.relu(self.norm3(self.conv3(x))))\n",
+        "\n",
+        "        # Flatten the output for the classification head\n",
+        "        x = x.view(-1, self.fc_input_dim)\n",
+        "\n",
+        "        # Classification head with ReLU and Softmax\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = F.softmax(self.fc2(x), dim=1) # Softmax for output layer\n",
+        "        return x"
       ]
     },
     {
@@ -1023,11 +1094,12 @@
         "        'best_val_acc': best_val_acc,\n",
         "        'history': history,\n",
         "    }\n",
+        "\n",
         "    # save model\n",
         "    model_path = OUT_DIR / f\"{exp_name}_best.pth\"\n",
         "    if best_model is not None:\n",
         "        torch.save(best_model, model_path)\n",
-        "    return out\n"
+        "    return out"
       ]
     },
     {
@@ -1055,7 +1127,7 @@
         "            num_epochs=cfg.get('num_epochs', 10),\n",
         "            batch_size=cfg.get('batch_size', 128),\n",
         "            quick=quick,\n",
-        "            verbose=True,\n",
+        "            verbose=True\n",
         "        )\n",
         "        results.append(res)\n",
         "    return results\n",
@@ -1130,7 +1202,7 @@
         "\n",
         "# Plot validation accuracies\n",
         "plot_history(results, key='train_loss')\n",
-        "plot_history(results, key='val_acc')\n"
+        "plot_history(results, key='val_acc')"
       ]
     },
     {
@@ -1172,11 +1244,56 @@
         "\n",
         "        def norm_layer(channels):\n",
         "            ## Copy your norm_layer implementation here.\n",
+        "            if norm is None:\n",
+        "                return nn.Identity() # No normalization\n",
+        "            elif norm == 'batch':\n",
+        "                return nn.BatchNorm2d(channels)\n",
+        "            elif norm == 'instance':\n",
+        "                return nn.InstanceNorm2d(channels)\n",
+        "            elif norm == 'group':\n",
+        "                # You need to specify the number of groups for GroupNorm.\n",
+        "                # A common choice is to use 32 groups, but it can be tuned.\n",
+        "                return nn.GroupNorm(32, channels)\n",
+        "            else:\n",
+        "                raise ValueError(\"The normalization technique is not supported\")\n",
         "\n",
         "        # Copy your implementation of SmallCNNWithNormalization here. Add dropout layers wherever you want.\n",
+        "        # Convolutional layers\n",
+        "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, stride=1, padding=1)\n",
+        "        self.norm1 = norm_layer(32)\n",
+        "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, stride=1, padding=1)\n",
+        "        self.norm2 = norm_layer(64)\n",
+        "        self.conv3 = nn.Conv2d(64, 128, kernel_size=3, stride=1, padding=1)\n",
+        "        self.norm3 = norm_layer(128)\n",
+        "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
+        "\n",
+        "        # Calculate the size of the flattened features after convolutional layers\n",
+        "        # Input image size is 32x32\n",
+        "        # After conv1 (32x32x32), norm1, pool (16x16x32)\n",
+        "        # After conv2 (16x16x64), norm2, pool (8x8x64)\n",
+        "        # After conv3 (8x8x128), norm3, pool (4x4x128)\n",
+        "        self.fc_input_dim = 128 * 4 * 4\n",
+        "\n",
+        "        # Classification head\n",
+        "        self.fc1 = nn.Linear(self.fc_input_dim, 256)\n",
+        "        self.dropout = nn.Dropout(self.dropout_p) # Add dropout layer\n",
+        "        self.fc2 = nn.Linear(256, num_classes)\n",
+        "\n",
         "\n",
         "    def forward(self, x):\n",
-        "        # Copy your implementation of SmallCNNWithNormalization here."
+        "        # Convolutional layers with ReLU, Normalization and MaxPool\n",
+        "        x = self.pool(F.relu(self.norm1(self.conv1(x))))\n",
+        "        x = self.pool(F.relu(self.norm2(self.conv2(x))))\n",
+        "        x = self.pool(F.relu(self.norm3(self.conv3(x))))\n",
+        "\n",
+        "        # Flatten the output for the classification head\n",
+        "        x = x.view(-1, self.fc_input_dim)\n",
+        "\n",
+        "        # Classification head with ReLU, Dropout and Softmax\n",
+        "        x = F.relu(self.fc1(x))\n",
+        "        x = self.dropout(x) # Apply dropout\n",
+        "        x = F.softmax(self.fc2(x), dim=1) # Softmax for output layer\n",
+        "        return x"
       ]
     },
     {
@@ -1235,7 +1352,7 @@
         "    model_path = OUT_DIR / f\"{exp_name}_best.pth\"\n",
         "    if best_model is not None:\n",
         "        torch.save(best_model, model_path)\n",
-        "    return out\n"
+        "    return out"
       ]
     },
     {
@@ -1317,7 +1434,7 @@
         "print(f\"Saved summary to {csv_path}\")\n",
         "\n",
         "# Plot validation accuracies\n",
-        "plot_history(results, key='val_acc')\n"
+        "plot_history(results, key='val_acc')"
       ]
     },
     {
@@ -1401,7 +1518,7 @@
         "\n",
         "    train_loader = torch.utils.data.DataLoader(train_set, batch_size=batch_size, shuffle=True, num_workers=2, pin_memory=True)\n",
         "    test_loader = torch.utils.data.DataLoader(test_set, batch_size=batch_size, shuffle=False, num_workers=2, pin_memory=True)\n",
-        "    return train_loader, test_loader, num_classes\n"
+        "    return train_loader, test_loader, num_classes"
       ]
     },
     {
@@ -1461,7 +1578,7 @@
         "    model_path = OUT_DIR / f\"{exp_name}_best.pth\"\n",
         "    if best_model is not None:\n",
         "        torch.save(best_model, model_path)\n",
-        "    return out\n"
+        "    return out"
       ]
     },
     {
@@ -1503,7 +1620,7 @@
         "    plt.legend(fontsize='small')\n",
         "    plt.grid(True)\n",
         "    plt.tight_layout()\n",
-        "    plt.show()\n"
+        "    plt.show()"
       ]
     },
     {
@@ -1561,7 +1678,7 @@
         "\n",
         "# Plot validation accuracies\n",
         "plot_history(results, key='train_loss')\n",
-        "plot_history(results, key='val_acc')\n"
+        "plot_history(results, key='val_acc')"
       ]
     },
     {
@@ -1626,7 +1743,8 @@
       "toc_visible": true,
       "collapsed_sections": [
         "2c8XdVh3qlj9"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
