complete MLP model

--- a/it4663/lab/PT_FFN_CNN.ipynb
+++ b/it4663/lab/PT_FFN_CNN.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/cuongct220020/d2l-training/blob/main/it4663/lab/PT_FFN_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -26,7 +37,7 @@
         "# LAB 1 : Multi-layer Perceptron  (MLP) and Convoutional Neural Network (CNN) in PyTorch\n",
         "# Applied Deep Learning - IT4653\n",
         "# School of Information and Communication Technology\n",
-        "# Hanoi University of Science and Technology\n"
+        "# Hanoi University of Science and Technology"
       ]
     },
     {
@@ -199,7 +210,7 @@
       "cell_type": "code",
       "source": [
         "# Import PyTorch and other relevant libraries\n",
-        "# Nhập thư viện PyTorch và các thư viện liên quan\n",
+        "# Nhập thư viện PyTorch và các thư thư viện liên quan\n",
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
@@ -215,11 +226,11 @@
         "\n",
         "        # TODO: Define the activation function for the first fully connected layer\n",
         "        # TODO: Định nghĩa hàm kích hoạt cho lớp kết nối đầy đủ\n",
-        "        self.tanh = # TODO\n",
+        "        self.tanh = nn.Tanh()\n",
         "\n",
         "        # TODO: Define the second Linear layer to output the classification probabilities\n",
         "        # TODO: Định nghĩa lớp tuyến tính thứ hai với đầu ra xác suất\n",
-        "        self.fc2 = # TODO\n",
+        "        self.fc2 = nn.Linear(256, 10)\n",
         "\n",
         "    def forward(self, x):\n",
         "        x = self.flatten(x)\n",
@@ -227,7 +238,9 @@
         "\n",
         "        # TODO: Implement the rest of forward pass of the model using the defined layers above\n",
         "        # TODO: Cài đặt phần còn lại bước tiến của mô hình dùng các tầng đã định nghĩa ở trên\n",
-        "        return x\n"
+        "        x = self.tanh(x)\n",
+        "        x = self.fc2(x)\n",
+        "        return x"
       ],
       "metadata": {
         "id": "IXQ5gBhfLGyR"
