--- a/it4663/lab/PT_FFN_CNN.ipynb
+++ b/it4663/lab/PT_FFN_CNN.ipynb
@@ -632,8 +632,7 @@
         "\n",
         "# Compute average accuracy\n",
         "# Tính giá trị trung bình độ chính xác\n",
-        "test_acc = correct_pred / total_pred\n",
-        "\n"
+        "test_acc = correct_pred / total_pred"
       ],
       "metadata": {
         "id": "zhLrJ8Cp4tVJ"
